<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <packaging>pom</packaging>
  <modelVersion>4.0.0</modelVersion>
  
  <name>Tropo2 Parent POM</name>
  
  <groupId>com.tropo</groupId>
  <artifactId>tropo-parent</artifactId>
  <version>2.0-SNAPSHOT</version>
  
  <properties>
      <spring.version>3.0.5.RELEASE</spring.version>
  </properties>
  
  <repositories>
    <repository>
      <id>voxeo-public</id>
      <name>Uncle Voxeo's Public Maven Repo</name>
      <url>http://maven.voxeo.net/nexus/content/groups/public</url>
    </repository>
  </repositories>  
  
  <dependencyManagement>
    <dependencies>
  		<dependency>
  			<groupId>dom4j</groupId>
  			<artifactId>dom4j</artifactId>
  			<version>1.6.1</version>
  		</dependency>
  		<dependency>
  			<groupId>joda-time</groupId>
  			<artifactId>joda-time</artifactId>
  			<version>1.6</version>
  		</dependency>
  		<dependency>
  			<groupId>com.voxeo</groupId>
  			<artifactId>vlib-core</artifactId>
  			<version>12.2.0</version>
  		</dependency>
  		<dependency>
  			<groupId>log4j</groupId>
  			<artifactId>log4j</artifactId>
  			<version>1.2.15</version>
  			<scope>provided</scope>
  			<exclusions>
  			  <exclusion>
      			<groupId>com.sun.jdmk</groupId>
      			<artifactId>jmxtools</artifactId>
			    </exclusion>
  			  <exclusion>
      			<groupId>javax.jms</groupId>
      			<artifactId>jms</artifactId>
			    </exclusion>
  			  <exclusion>
      			<groupId>com.sun.jmx</groupId>
      			<artifactId>jmxri</artifactId>
			    </exclusion>
			  </exclusions>
  		</dependency>
  		<dependency>
  			<groupId>org.hibernate</groupId>
  			<artifactId>hibernate-validator</artifactId>
  			<version>4.1.0.Final</version>
  		</dependency>
  		<dependency>
  			<groupId>com.voxeo.moho</groupId>
  			<artifactId>moho-api</artifactId>
  			<version>0.7-SNAPSHOT</version>
  		</dependency>
  		<dependency>
  			<groupId>com.voxeo.moho</groupId>
  			<artifactId>moho-impl</artifactId>
  			<version>0.7-SNAPSHOT</version>
  		</dependency>
  		<dependency>
  			<groupId>com.voxeo.moho</groupId>
  			<artifactId>sipservlet-api</artifactId>
  			<version>1.1-SNAPSHOT</version>
  			<scope>provided</scope>
  		</dependency>
  		<dependency>
  			<groupId>javax.servlet</groupId>
  			<artifactId>servlet-api</artifactId>
  			<version>2.5</version>
  			<scope>provided</scope>
  		</dependency>
		<dependency>
                        <groupId>javax.jms</groupId>
                        <artifactId>jms</artifactId>
                        <version>1.1</version>
		</dependency>
  		<dependency>
  			<groupId>com.voxeo.moho</groupId>
  			<artifactId>mscontrol-api</artifactId>
  			<version>1.0-SNAPSHOT</version>
  			<scope>provided</scope>
  		</dependency>
  		<dependency>
  			<groupId>com.voxeo</groupId>
  			<artifactId>msctrl-spi</artifactId>
  			<version>10_0_2_C201103190002_0</version>
  			<scope>provided</scope>
  		</dependency>
  		<dependency>
  			<groupId>com.voxeo.xmpp</groupId>
  			<artifactId>xmppservlet-api</artifactId>
  			<version>1.0</version>
  			<scope>provided</scope>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework</groupId>
  			<artifactId>spring-beans</artifactId>
  			<version>${spring.version}</version>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework</groupId>
  			<artifactId>spring-context</artifactId>
  			<version>${spring.version}</version>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework</groupId>
  			<artifactId>spring-web</artifactId>
  			<version>${spring.version}</version>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework</groupId>
  			<artifactId>spring-test</artifactId>
  			<version>${spring.version}</version>
  			<scope>test</scope>
  		</dependency>
                <dependency>
                        <groupId>org.springframework</groupId>
                        <artifactId>spring-jms</artifactId>
                        <version>${spring.version}</version>
                </dependency>
  		<dependency>
  		    <groupId>org.hibernate</groupId>
  		    <artifactId>hibernate-validator</artifactId>
  		    <version>4.0.2.GA</version>
  		</dependency>
  		<dependency>
  		    <groupId>org.slf4j</groupId>
  		    <artifactId>slf4j-api</artifactId>
  		    <version>1.6.1</version>
  		</dependency>    
  		<dependency>
  			<groupId>cglib</groupId>
  			<artifactId>cglib-nodep</artifactId>
  			<version>2.1_3</version>
  		</dependency>
		<dependency>
		    <groupId>org.apache.activemq</groupId>
		    <artifactId>activemq-core</artifactId>
		    <version>5.5.0</version>
		    <scope>runtime</scope>
		    <exclusions>
				<exclusion>
					<groupId>org.apache.activemq</groupId>
					<artifactId>activeio-core</artifactId>
				</exclusion>
		    </exclusions>
		</dependency>
      <dependency>
          <groupId>org.jetlang</groupId>
          <artifactId>jetlang</artifactId>
          <version>0.2.5</version>
      </dependency>
      <dependency>
        <groupId>javax.sdp</groupId>
        <artifactId>nist-sdp</artifactId>
        <version>1.0</version>
        <scope>test</scope>
      </dependency>      
    </dependencies>
  </dependencyManagement>
  
  <dependencies>
    <dependency>
      <groupId>org.codehaus.groovy</groupId>
      <artifactId>groovy-all</artifactId>
      <version>1.7.10</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit-dep</artifactId>
      <version>4.8.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <attach>true</attach>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <redirectTestOutputToFile>true</redirectTestOutputToFile>
          <toggleDisplay>true</toggleDisplay>
          <childDelegation>true</childDelegation>
          <testFailureIgnore>true</testFailureIgnore>
          <argLine>-Xmx256M -XX:MaxPermSize=128M</argLine>
          <excludes>
            <exclude>**/Abstract*.*</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.gmaven</groupId>
        <artifactId>gmaven-plugin</artifactId>
        <version>1.3</version>
        <configuration>
          <providerSelection>1.7</providerSelection>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.codehaus.gmaven.runtime</groupId>
            <artifactId>gmaven-runtime-1.7</artifactId>
            <version>1.2</version>
            <exclusions>
              <exclusion>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-all</artifactId>
              </exclusion>
            </exclusions>
          </dependency>
          <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>1.7.0</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <goals>
              <goal>generateStubs</goal>
              <goal>compile</goal>
              <goal>generateTestStubs</goal>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <scm>
    <connection>scm:git:git@github.com:tropo/tropo2.git</connection>
    <url>scm:git:git@github.com:tropo/tropo2.git</url>
    <developerConnection>scm:git:git@github.com:tropo/tropo2.git</developerConnection>
  </scm>
  <modules>
    <module>tropo-server</module>
    <module>tropo-core</module>
    <module>tropo-war</module>
  </modules>
  <profiles>
    <profile>
      <id>uml</id>
      <activation>
        <property>
          <name>moho.javadoc.enableUml</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>2.6.1</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <configuration>
                  <javadocDirectory>
                      ${basedir}/src/main/javadoc/
                    </javadocDirectory>
                  <docfilessubdirs>true</docfilessubdirs>
                </configuration>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <docfilessubdirs>true</docfilessubdirs>
              <!--
                  Note: You must have the Graphviz binary in your PATH, or
                  the UML images will not be generated. For more
                  information about Graphviz, please refer to
                  http://www.graphviz.org/
                -->
              <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
              <docletArtifact>
                <groupId>org.umlgraph</groupId>
                <artifactId>doclet</artifactId>
                <version>5.1</version>
              </docletArtifact>
              <additionalparam>-all</additionalparam>
              <useStandardDocletOptions>true</useStandardDocletOptions>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>2.4</version>
      </plugin>
    </plugins>
  </reporting>
</project>
